# ort-assigment

./: Project_Doc_Deep_Dive.md  README.md  TESTING_SUMMARY.md  ai_tools_insigths.docx  docker-compose.yml
.cursor/rules/: principles.mdc  ui-frontend.mdc
.github/: README.md
.github/workflows/: ci.yml  test.yml
backend/: .dockerignore  .gitignore  DATABASE_ARCHITECTURE.md  Dockerfile  Makefile  README.md  app.db  database_schema.sql  example_env  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  set_db_path.py  setup.py
backend/app/: app.db  main.py
backend/app/api/: __init__.py  api.py
backend/app/api/endpoints/: ai.py  answers.py  auth.py  questions.py  students.py
backend/app/config/: ai_config.py
backend/app/database/: __init__.py  config.py
backend/app/database/models/: __init__.py  answer.py  base.py  question.py
backend/app/database/repositories/: __init__.py  answer_repository.py  base.py  question_repository.py
backend/app/models/: ai_models.py  student.py
backend/app/services/: __init__.py  ai_service.py  answer_service.py  question_service.py  student_service.py
backend/app/utils/: error_handler.py  timezone.py
backend/tests/: __init__.py  conftest.py  test_answer_service.py  test_answers_api.py  test_question_service.py  test_questions_api.py  test_repositories.py
data/: students.json
ort-frontend/: .dockerignore  .env  Dockerfile  example_env  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
ort-frontend/src/: App.tsx  theme.css  vite-env.d.ts
ort-frontend/src/components/: Layout.tsx  (+4 more)
(+43 files in other folders)
